test/integration/bad/new/tilde-bad4.stan
transformed data { 1.0 ~ normal(0,1) T [,1.0 while